--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .middle {
   position: absolute;
-  left: 20%;
-  right: 21%;
+  left: 15%;
+  right: 16%;
   color: black;
 }
-
 .colorset{
 color: black ;
 }
@@ -12,4 +11,7 @@ color: black ;
 position:fixed;
 right:0;
 float:right;
+}
+ul {
+  list-style-type: disc;
 }
